# web

./: README.md  chat_history.db  codex.md  hello_gui.py  tcpchat_master_gui.py  tcpserverchat.py
god_chat_qt_cpp/: CMakeLists.txt  README.md
god_chat_qt_cpp/qml/: Main.qml
god_chat_qt_cpp/src/: ChatClient.cpp  ChatClient.h  main.cpp
